[package]
name = "desugar-impl"
version = "0.1.0"
edition = "2018"
authors = ["René Kijewski <rene.[SURNAME]@fu-berlin.de>"]
license = "ISC OR MIT OR Apache-2.0"
description = "Sugar for less explicit generics in structs, enums, and union declarations."
homepage = "https://github.com/Kijewski/desugar-impl"
repository = "https://github.com/Kijewski/desugar-impl"
categories = ["template-engine"]
keywords = ["html", "template"]
readme = "README.md"

[lib]
name = "desugar_impl"
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
