[package]
name = "desugar-impl"
version = "0.1.1"
edition = "2018"
authors = ["René Kijewski <rene.[SURNAME]@fu-berlin.de>"]
license = "ISC OR MIT OR Apache-2.0"
description = "Sugar for less explicit generics in structs, enums, and union declarations."
homepage = "https://github.com/Kijewski/desugar-impl"
repository = "https://github.com/Kijewski/desugar-impl"
categories = ["rust-patterns", "data-structures", "no-std"]
keywords = ["syntax", "macros", "derive"]
readme = "README.md"

[lib]
name = "desugar_impl"
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
